--- a/api/web5-js/did.mdx
+++ b/api/web5-js/did.mdx
@@ -89,7 +89,7 @@ Resolves a DID into a DID document by using the "read" operation of the applicab
 
 ```js
 const myDid = 'did:key:z6MkhvthBZDxVvLUswRey729CquxMiaoYXrT5SYbCAATc8V9';
-const didDocument = await did.resolve(myDid);
+const didDocument = await web5.did.resolve(myDid);
 ```
 
 </section>
