--- a/api/web5-js/index.mdx
+++ b/api/web5-js/index.mdx
@@ -91,6 +91,10 @@ import { Web5 } from "https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.7.6/dist/
 
 Enables an app to request connection to a user's local identity app (like a desktop or mobile agent - work is underway for reference apps of each), or generate an in-app DID to represent the user (e.g. if the user does not have an identity app)
 
+:::note
+The outputs of this method invocation will be used throughout the other API methods.
+:::
+
 #### Parameters
 
 <ApiDetails
