--- a/api/web5-js/dwn/protocols.mdx
+++ b/api/web5-js/dwn/protocols.mdx
@@ -74,7 +74,7 @@ In order to also send the protocol to remote DWNs, configure() should be followe
                                                                     isOptional: true,
                                                                     type: 'string[]',
                                                                     field: 'dataFormats',
-                                                                    value: 'Array of the IANA string corresponding with the formats of how the data will be bucketed. See IANA\'s Media Type list here: https://www.iana.org/assignments/media-types/media-types.xhtml',
+                                                                    value: 'Array of the IANA strings corresponding with the formats of how the data will be bucketed. See IANA\'s Media Type list here: https://www.iana.org/assignments/media-types/media-types.xhtml',
                                                                 },
                                                             },                              
                                                         ]}
